more bootstrap v4 conversion

--- a/www/_includes/colors.html
+++ b/www/_includes/colors.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-10 col-md-offset-1">
+    <div class="col">
         <p>Colors: {%- for color in page.colors %} <span class="preview-color" style="background-color:{{color}}"></span> {{color}} &nbsp;{% endfor -%}</p>
     </div>
 </div>
