--- a/www/_includes/fonts.html
+++ b/www/_includes/fonts.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-10 col-md-offset-1">
+    <div class="col">
         <p>
             Font: {% if page.font.url %}<a href="{{page.font.url}}">{{page.font.name}}</a>{% else %}{{page.font.name}}{% endif %}
             {% if page.font.myfonts %} | <a href="{{page.font.myfonts}}?refby=vlz">MyFonts</a>{% endif %}
