--- a/www/_includes/imagelist.html
+++ b/www/_includes/imagelist.html
@@ -1,4 +1,4 @@
-<div class="row"><div class="col-md-10 col-md-offset-1">
+<div class="row"><div class="col">
 <table class="table table-striped">
 	<thead>
 		<tr>
@@ -11,12 +11,12 @@
 {% assign sorted_images = page.images | sort %}{% for image in sorted_images %}
 		<tr>
 			<td class="hidden-xs hidden-sm" style="white-space:nowrap;vertical-align:middle;">
-				<a class="btn btn-default btn-sm" href="/util/preview.html?image=/logos/{{page.logohandle}}/{{image}}" title="preview" rel="nofollow"><i class="fa fa-search"></i></a>
-				<a class="btn btn-default btn-sm" download="{{image}}" href="{{image}}" title="Download"><i class="fa fa-download"></i></a>
-				<a class="btn btn-default btn-sm" href="https://github.com/VectorLogoZone/vectorlogozone/commits/gh-pages/www/logos/{{page.logohandle}}/{{image}}" title="revision history" rel="nofollow"><i class="fa fa-history"></i></a>
-                <btn class="btn btn-default btn-sm copy2cb" data-clipboard-text="{{site.production_url}}/logos/{{page.logohandle}}/{{image}}" href="#" title="Copy URL to Clipboard" rel="nofollow"><i class="far fa-clipboard"></i></btn>
+				<a class="btn btn-secondary btn-sm" href="/util/preview.html?image=/logos/{{page.logohandle}}/{{image}}" title="preview" rel="nofollow"><i class="fa fa-search"></i></a>
+				<a class="btn btn-secondary btn-sm" download="{{image}}" href="{{image}}" title="Download"><i class="fa fa-download"></i></a>
+				<a class="btn btn-secondary btn-sm" href="https://github.com/VectorLogoZone/vectorlogozone/commits/gh-pages/www/logos/{{page.logohandle}}/{{image}}" title="revision history" rel="nofollow"><i class="fa fa-history"></i></a>
+                <button class="btn btn-secondary btn-sm copy2cb" data-clipboard-text="{{site.production_url}}/logos/{{page.logohandle}}/{{image}}" href="#" title="Copy URL to Clipboard" rel="nofollow"><i class="far fa-clipboard"></i></button>
                 <div style="position:relative;display:inline-block;"><button class="btn btn-primary btn-sm copy2tip" style="position:absolute;left:0;right:0;">Copied to Clipboard</button>
-                <a class="btn btn-default btn-sm" href="/util/convert_to_png.html?svg=/logos/{{page.logohandle}}/{{image}}" title="Convert to PNG" rel="nofollow"><i class="fa fa-exchange"></i></a>
+                <a class="btn btn-secondary btn-sm" href="/util/convert_to_png.html?svg=/logos/{{page.logohandle}}/{{image}}" title="Convert to PNG" rel="nofollow"><i class="fa fa-exchange"></i></a>
                 </div>
 			</td>
 			<td class="hidden-xs" style="white-space:nowrap;vertical-align:middle;">
