more bootstrap v4 conversion

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -1,9 +1,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link href="/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link href="/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
 	<meta name="theme-color" content="#2c3e50" />
 	<style>
 
@@ -98,8 +96,9 @@
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
 	<script>if (window.top.location != window.location) { window.top.location.href = document.location.href; }</script>
-	<script src="/js/jquery-2.1.4.js"></script>
-	<script src="/js/bootstrap.js"></script>
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     {%- if page.images.size > 0 %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
     <script>
