fixed next/previous build test that shouldn't have been committed

--- a/www/_includes/nextprev.html
+++ b/www/_includes/nextprev.html
@@ -1,4 +1,4 @@
-{%- if jekyll.environment == "development" -%}
+{%- if jekyll.environment == "production" -%}
     {%- if page.logohandle -%}
         {%- assign sorted_pages = site.pages | sort:'sort'- %}
         {%- for logopage in sorted_pages -%}
