--- a/www/_includes/searchtab.html
+++ b/www/_includes/searchtab.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
-{% if page.url == '/search.html' %}
-    <li role="presentation" class="nav-item"><a class="nav-link active" href="/search.html">VectorLogoZone</a></li>
+{% if page.url == '/index.html' or page.url == '/' %}
+    <li role="presentation" class="nav-item"><a class="nav-link active" href="/index.html">VectorLogoZone</a></li>
 {% else %}
     <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/search.html">VectorLogoZone</a></li>
 {% endif %}
