--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -28,6 +28,8 @@
         color: white;
     }
 
+    .navbar-logo { height:31px;margin-top:-8px;padding-top:8px;padding-right:8px; }
+
     h1 {
         margin-top: 21px;
     }
