link to Github search if nothing found

--- a/www/_includes/searchtab.html
+++ b/www/_includes/searchtab.html
@@ -2,7 +2,7 @@
 {% if page.url == '/index.html' or page.url == '/' %}
     <li role="presentation" class="nav-item"><a class="nav-link active" href="/index.html">VectorLogoZone</a></li>
 {% else %}
-    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/search.html">VectorLogoZone</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/index.html">VectorLogoZone</a></li>
 {% endif %}
 {% if page.url == '/search-github.html' %}
     <li role="presentation" class="nav-item"><a class="nav-link active" href="/search-github.html">Github</a></li>
