--- a/www/_includes/navbar.html
+++ b/www/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark navbar-static-top d-print-none" style="background-color:#1d8286;x:#2c3e50;">
+<nav class="navbar navbar-expand-sm navbar-dark navbar-static-top d-print-none" style="background-color:#1d8286;">
     <div class="container-fluid">
         <a class="navbar-brand" href="/" title="{{site.title}}"><img src="/images/about/vlzlogo-white.svg" alt="{{site.title}} Logo" class="navbar-logo" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
