--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{{ page.title | default: "(untitled)"}}{% if page.images.size > 0 %} Vector Logos{% endif %} - {{ site.title }}</title>
+	<title>{{ page.title | default: "(untitled)"}}{% if page.images.size > 0 %} SVG Vector Logos{% endif %} - {{ site.title }}</title>
 {% include meta.html %}
 </head>
 <body>
