auto search for projects w/o logos

--- a/www/_includes/logosearch.html
+++ b/www/_includes/logosearch.html
@@ -1,7 +1,7 @@
 <p>Find alternatives:
-    <a href="/search-github.html?q={{page.title | cgi_escape}}"
+    <a href="https://search.vectorlogo.zone/?q={{page.title | cgi_escape}}"
        rel="nofollow">
-        <img alt="search this logo on Github" class="searchlogo" src="/logos/github/github-tile.svg" />
+        <img alt="expanded search for this logo" class="searchlogo" src="/logos/vectorlogozone/vectorlogozone-tile.svg" />
     </a>
     <a href="https://commons.wikimedia.org/w/index.php?search={{page.title | cgi_escape}}+filemime%3Asvg"
        rel="nofollow">
