--- a/www/_includes/searchtab.html
+++ b/www/_includes/searchtab.html
@@ -4,10 +4,10 @@
 {% else %}
     <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/index.html">VectorLogoZone</a></li>
 {% endif %}
-{% if page.url == '/search-github.html' %}
-    <li role="presentation" class="nav-item"><a class="nav-link active" href="/search-github.html">Github</a></li>
+{% if page.url == '/' %}
+    <li role="presentation" class="nav-item"><a class="nav-link active" href="https://search.vectorlogo.zone/">Github</a></li>
 {% else %}
-    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/search-github.html">Github</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="https://search.vectorlogo.zone/">Github</a></li>
 {% endif %}
 {% if page.url == '/search-other.html' %}
     <li role="presentation" class="nav-item"><a class="nav-link active" href="/search-other.html">Others</a></li>
