changed all search references to point to awesomelogos

--- a/www/_includes/logosearch.html
+++ b/www/_includes/logosearch.html
@@ -1,5 +1,5 @@
 <p>Find alternatives:
-    <a href="https://search.vectorlogo.zone/?q={{page.title | cgi_escape}}"
+    <a href="https://www.awesomelogos.org/search.html?q={{page.title | cgi_escape}}"
        rel="nofollow">
         <img alt="expanded search for this logo" class="searchlogo" src="/logos/vectorlogozone/vectorlogozone-tile.svg" />
     </a>
