--- a/www/_includes/searchtab.html
+++ b/www/_includes/searchtab.html
@@ -5,14 +5,14 @@
     <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/index.html">VectorLogoZone</a></li>
 {% endif %}
 {% if page.url == '/' %}
-    <li role="presentation" class="nav-item"><a class="nav-link active" href="https://search.vectorlogo.zone/">Github</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link active" href="https://www.awesomelogos.org/search.html">Github</a></li>
 {% else %}
-    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="https://search.vectorlogo.zone/">Github</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="https://www.awesomelogos.org/search.html">Github</a></li>
 {% endif %}
 {% if page.url == '/search-other.html' %}
-    <li role="presentation" class="nav-item"><a class="nav-link active" href="/search-other.html">Others</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link active" href="https://www.awesomelogos.org/not-awesome/index.html">Others</a></li>
 {% else %}
-    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/search-other.html">Others</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="https://www.awesomelogos.org/not-awesome/index.html">Others</a></li>
 {% endif %}
 </ul>
 <p>&nbsp;</p>
