removed references to old search page

--- a/www/_includes/meta-home.html
+++ b/www/_includes/meta-home.html
@@ -19,7 +19,7 @@
     "logo": "https://www.vectorlogo.zone/favicon.svg",
     "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://www.vectorlogo.zone/search.html?q={query}",
+        "target": "https://www.vectorlogo.zone/index.html?q={query}",
         "query-input": "required name=query"
     },
     "sameAs": [
