--- a/www/_layouts/shoelace.html
+++ b/www/_layouts/shoelace.html
@@ -51,7 +51,7 @@
             <a href="/logos/index.html">Logos</a>
             <a href="/support/index.html">FAQ</a>
             <a href="/report/index.html">Reports</a>
-            <a href="/search.html"><i class="fa fa-search"></i></a>
+            <a href="/index.html"><i class="fa fa-search"></i></a>
         </div>
     </div>
 </div>
