--- a/www/_includes/logosearch.html
+++ b/www/_includes/logosearch.html
@@ -1,14 +1,8 @@
 <p>Find alternatives:
     <a href="https://www.awesomelogos.org/search.html?q={{page.title | cgi_escape}}"
-       rel="nofollow">
-        <img alt="expanded search for this logo" class="searchlogo" src="/logos/vectorlogozone/vectorlogozone-tile.svg" />
-    </a>
+       rel="nofollow"><img alt="expanded search for this logo" class="searchlogo" src="/logos/vectorlogozone/vectorlogozone-tile.svg" /></a>
     <a href="https://commons.wikimedia.org/w/index.php?search={{page.title | cgi_escape}}+filemime%3Asvg"
-       rel="nofollow">
-        <img alt="search this logo on Wikimedia Commons" class="searchlogo" src="/logos/wikipedia/wikipedia-tile.svg" />
-    </a>
+       rel="nofollow"><img alt="search this logo on Wikimedia Commons" class="searchlogo" src="/logos/wikipedia/wikipedia-tile.svg" /></a>
     <a href="https://www.google.com/search?tbm=isch&tbs=ift:svg&q={{page.title | cgi_escape}}"
-       rel="nofollow">
-        <img alt="search this logo on Google" class="searchlogo" src="/logos/google/google-tile.svg" />
-    </a>
+       rel="nofollow"><img alt="search this logo on Google" class="searchlogo" src="/logos/google/google-tile.svg" /></a>
 </p>
