--- a/www/_includes/logosearch.html
+++ b/www/_includes/logosearch.html
@@ -1,8 +1,9 @@
 <p>Find alternatives:
     <a href="https://www.awesomelogos.org/search.html?q={{page.title | cgi_escape}}"
-       rel="nofollow"><img alt="expanded search for this logo" class="searchlogo" src="{{site.production_url}}/logos/awesomelogos/awesomelogos-icon.svg" /></a>
+       title="Search on AwesomeLogos.Org"><img alt="AwesomeLogos.Org logo" class="searchlogo" src="{{site.production_url}}/logos/awesomelogos/awesomelogos-icon.svg" /></a>
     <a href="https://commons.wikimedia.org/w/index.php?search={{page.title | cgi_escape}}+filemime%3Asvg"
-       rel="nofollow"><img alt="search this logo on Wikimedia Commons" class="searchlogo" src="{{site.production_url}}/logos/wikipedia/wikipedia-tile.svg" /></a>
+       title="Search on Wikimedia Commons"><img alt="Wikipedia logo" class="searchlogo" src="{{site.production_url}}/logos/wikipedia/wikipedia-tile.svg" /></a>
     <a href="https://www.google.com/search?tbm=isch&tbs=ift:svg&q={{page.title | cgi_escape}}"
-       rel="nofollow"><img alt="search this logo on Google" class="searchlogo" src="{{site.production_url}}/logos/google/google-tile.svg" /></a>
+       rel="nofollow"
+       title="Search with Google Image Search"><img alt="Google logo" class="searchlogo" src="{{site.production_url}}/logos/google/google-tile.svg" /></a>
 </p>
