switched subdomain from api to tools

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -134,7 +134,7 @@
     {%- if page.images.size > 0 %}
     <link rel="amphtml" href="{{site.production_url}}/logos/{{page.logohandle}}/index.amp.html" />
     <link rel="alternate" type="application/json+oembed"
-          href="https://api.vectorlogo.zone/oembed/oembed.json?url={{site.production_url | url_encode}}%2Flogos%2F{{page.logohandle}}%2Findex.html&format=json"
+          href="https://tools.vectorlogo.zone/oembed/oembed.json?url={{site.production_url | url_encode}}%2Flogos%2F{{page.logohandle}}%2Findex.html&format=json"
           title="oEmbed Link" />
 	<meta property="description" content="Vector logos for {{page.title}} in uniform sizes and layouts in the standard SVG file format" />
 	<meta property="og:type" content="article" />
