integration with vlz-upload

--- a/www/_includes/logosearch.html
+++ b/www/_includes/logosearch.html
@@ -6,4 +6,7 @@
     <a href="https://www.google.com/search?tbm=isch&tbs=ift:svg&q={{page.title | cgi_escape}}"
        rel="nofollow"
        title="Search with Google Image Search"><img alt="Google logo" class="searchlogo" src="{{site.production_url}}/logos/google/google-tile.svg" /></a>
+   <a href="https://upload.vectorlogo.zone/upload/{{page.logohandle | cgi_escape}}/index.html" rel="nofollow"
+      title="User-submitted logos"><img alt="VLZ logo" class="searchlogo"
+      src="{{site.production_url}}/logos/vectorlogozone/vectorlogozone-tile.svg" /></a>
 </p>
