--- a/www/_includes/imagelist.html
+++ b/www/_includes/imagelist.html
@@ -1,5 +1,5 @@
 <div class="row"><div class="col">
-<table class="table table-striped">
+<table class="table table-striped border-bottom">
 	<thead>
 		<tr>
 			<th class="d-none d-md-table-cell">&nbsp;</th>
