--- a/www/_includes/uploads.html
+++ b/www/_includes/uploads.html
@@ -1,7 +1,6 @@
-{% if page.images.size == 0% -%}
-<h2>User-submitted Logos</h2>
+<h2>Community Contributions</h2>
 <div class="uploadresults logo-container">
-    <img src="/images/spinner.svg" style="height:64px;" class="align-content-center" />
+    <img src="/images/spinner.svg" style="height:64px;box-shadow:none;border:0;" class="align-content-center" />
 </div>
 <p><a class="btn btn-outline-primary" href="https://upload.vectorlogo.zone/upload/{{page.logohandle}}/index.html">Upload</a></p>
 <script>
@@ -21,16 +20,14 @@
                     content.append($("<div>").addClass("alert").addClass("alert-warning").text(data.message));
                 }
                 else {
-                    for (var loop in data.results) {
-                        console.log(data.results[loop]);
-                        var result = data.results[loop];
-                        content.append($("<a>").attr("href", result.source).attr("title", result.description).append($("<img>").attr("src", "https://www.awesomelogos.org" + result.url).css("max-width", "128px").css("max-height", "64px")));
+                    for (var image of data.images) {
+                        console.log(image);
+                        content.append($("<a>").attr("href", image.url).append($("<img>").attr("src", image.src || image.image).css("max-width", "270px").css("height", "90px")));
                     }
                 }
             },
             timeout: 15000,
-            url: "https://upload.vectorlogo.zone/public/{{page.logohandle}}/pending.json"
+            url: "https://upload.vectorlogo.zone/api/{{page.logohandle}}/pending.json"
         });
     });
 </script>
-{% endif -%}
